# epictetus

./: .gitignore  .gitlab-ci.yml  Changes  LICENSE  README.md  dune-project  epictetus.opam
src/: aligner.ml  aligner.mli  aligner_sig.ml  aligner_sig.mli  alignment.mli  dune  exn.ml  exn.mli  generic_aligner.ml  generic_aligner.mli  size_tree.ml  size_tree.mli  std_aligners.ml  std_aligners.mli  tabulator.ml  tabulator.mli
tests/: dune  epictetus_test.ml  epictetus_test_lib.ml  epictetus_test_print.ml  epictetus_test_tree_size.ml
