opam-version: "2.0"
name: "epictetus"
version: "3.0.0"
synopsis: "Elegant Printer of Insanely Complex Tables Expressing Trees with Uneven Shapes"
maintainer: "Marc Chevalier <github@marc-chevalier.com>"
authors: "Marc Chevalier <github@marc-chevalier.com>"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.6.3"}
  "cppo" {build & >= "1.6.5"}
  "ounit2" {with-test & >= "2.0.8"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest"]
]
homepage: "https://github.com/marc-chevalier/epictetus"
bug-reports: "https://github.com/marc-chevalier/epictetus/issues"
dev-repo: "git+https://github.com/marc-chevalier/epictetus.git"
license: "MIT"
description: """
Align nicely tables in which each line may not have the same subdivision of subcolumns.
"""
